SUBDIRS = libgupnp-av po

pkgconfig_DATA= gupnp-av-1.0.pc
pkgconfigdir = $(libdir)/pkgconfig

EXTRA_DIST = gupnp-av-1.0.pc.in gupnp-av-1.0-uninstalled.pc.in

# Extra clean files so that maintainer-clean removes *everything*
MAINTAINERCLEANFILES = aclocal.m4 compile config.guess config.sub configure depcomp install-sh ltmain.sh Makefile.in missing config.h.in
